# univr

Computer vision/Assignments/Assignment 01 - Camera calibration/: assignment1.m  perspective_matrix_1.mat
Computer vision/Assignments/Assignment 02 - Animation/: assignment2.asv  assignment2.m
Computer vision/Assignments/Assignment 03 - Triangulation/: assignment3.m
Computer vision/Assignments/Assignment 04 - Epipolar lines/: assignment4.m  perspective_matrix_1.mat
Computer vision/Assignments/Assignment 05 - Rectification/: assignment5.m
Computer vision/Assignments/Assignment 06 - Mosaicing/: assignment6.asv  assignment6.m
Computer vision/Assignments/Assignment 07 - Stereo matching [!]/: assignment7.asv  assignment7.m  (+1 more)
Computer vision/Lecture slides/: 02 - Image formation.pptx  03 - Projective geometry.pptx  07 - Image rectification.pptx  08 - SIFT.pptx
Machine learning & artificial intelligence/: .gitignore
Mobile robotics/: .gitignore
Robot programming and control/: .gitignore
Robot programming and control/Identification 1.0 - lite/: frictionModes.m
Robot programming and control/Identification 1.0 - lite_old/: LSIdentification.m  MLIdentification.m
Robot programming and control/datasheet-and-configs/: forecast_config_ec45_flat.ini  forecast_ec90_flat.ini  forecast_harmonic_drive.ini  forecast_maxon_config_DCX22L.ini
Robot programming and control/sinCurrentController/: SinusoidalCurrentController.cpp  SinusoidalCurrentController.hpp
Robot_programming_and_control/: .gitignore
Robot_programming_and_control/Controller synthesis/: ControlSystemDesignerSession.mat  ControllerPDHighFreq.mat  ControllerPDLowFreq.mat  ControllerPD_Fixed.mat  ControllerPID_Fixed.mat  controllerSynthesis.m  dataPlot.asv  dataPlot.m
Robot_programming_and_control/LikelihoodIdentification/: LikelihoodIdentification.m
Robotics, vision and control/: .gitignore
Robotics_vision_and_control/Assignments/Robotics/colcon_ws/src/kinematic/: CMakeLists.txt
Robotics_vision_and_control/Assignments/Robotics/colcon_ws/src/kinematic/include/kinematic/: inverse_kinematic.hpp
Robotics_vision_and_control/Assignments/Robotics/colcon_ws/src/kinematic/src/: forward_kinematic.cpp  inverse_kinematic.cpp
(+454 files in other folders)
